modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_wrong_to_typed.gd
func test():
	var _typed: Array[GlobalClass1] = [GlobalClass2.new() as GlobalBase]
	print('not ok')
